--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,4 @@
 .flex{
-  background-color: rgb(255, 252, 255);
   font-size: 15px;
   font-family: cursive;
 }
@@ -11,7 +10,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-around;
   height: 1000px;
-  align-content: center;
+  align-items: center;
 }
 .header h1{
   position: relative;
@@ -19,4 +18,29 @@
   font-weight: 470;
   font-family:'Courier New', Courier, monospace;
   font-style: italic;
+}
+.container{
+  background-color: rgb(124, 165, 246);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container:hover{
+  background-color: rgb(31, 140, 152);
+  transform: scale(1.1);
+  color:aliceblue;
+}
+.container:hover > a{
+  color:aliceblue;
+}
+.container img{
+  margin-top: 15px;
+}
+.container a{
+  text-decoration: none;
+}
+.container a:hover{
+  text-decoration: underline;
 }
